# sauron

./: .gitignore  AGENTS.md  COPYRIGHT  ChangeLog  EMAIL_IMPROVEMENT_EXAMPLE.txt  Makefile.in  README  README.upgrade  TODO  acconfig.h  addgroup  addhosts  addipv6  adduser  addzone  back_end.pl  cgi_util.pl  check-pending  check-reverse  check_test19.py  check_test19_simple.pl  check_test19_sql.sh  compare-zones  compare-zones.pl  config  config-browser.in  config.h.in  config.in  configure  configure.in  createtables  db.pl  dbcheck  delgroup  deluser  expire-hosts  export-by-group  export-hosts  export-ip-list  export-networks  (+37 more)
Sauron/: Approval.pm  BackEnd.pm  CGIutil.pm  DB-DBI.pm  DB-Pg.pm  DB.pm  ErrorCodes.pm  Sauron.pm  SetupIO.pm  Util.pm  UtilDhcp.pm  UtilZone.pm
cgi/: approve.cgi  browser.cgi  sauron.cgi
contrib/: Ethernet.txt  additional-ether-codes.txt  check-pending  config-sauron-postgres  config-sauron-postgres.sql  debian12-sauron-deb-install.sh  dhcpd-lease-view  hashbang-check.sh  htmldoc-sql  iplist.cgi  kerberos-auth  load-sauron-db  migrate-db-to-utf8.sh  named-restart  netnames-jyu.pl  reset-perl-prog_dir.sh  sauron-backup
doc/: CGIutil.txt  command-ref.sgml  form-edit-host.sgml  form-edit-net.sgml  form-edit-server.sgml  form-edit-zone.sgml  form-new-host.sgml  form-new-server.sgml  form-new-zone.sgml  form-search-hosts.sgml  gpl.sgml  kuvaus.txt  manual.sgml  overview.eps  overview.gd  relations.eps  relations.gd  sauron.1  sauron_tower_bare.eps  sauron_tower_text.eps
init/: drop_tables.sql  full-privileges.sql  tables.sql
plugins/: Users.conf  Users.pm  sample.conf  sample.pm
redhat/: sauron.spec
solaris/: makesvr4pkg.pl
sql/: DEFAULTS.sql  a_entries.sql  acls.sql  (+64 more)
(+36 files in other folders)
